# gts

./: .gitignore  .goreleaser.yml  LICENSE  README.md  bytes.go  containers.go  data_structures.go  date.go  date_test.go  encoding.go  fasta.go  feature.go  feature_filter.go  feature_table.go  feature_table_test.go  feature_test.go  filetype.go  formatter.go  genbank.go  genbank_test.go  go.mod  go.sum  gq  gq.1  gt1_test.go  gts  gts_test.go  io.go  location.go  location_test.go  locator.go  locator_test.go  logging.go  logging_test.go  math.go  modifier.go  modifier_test.go  molecule.go  molecule_test.go  nucleic.go  (+34 more)
cmd/: io.go  terminal.go
completion/: gts-completion.bash  gts-completion.zsh
conda/: build.sh  meta.yaml
docs/: CNAME  gts-annotate.1.html  gts-cache-list.1.html  gts-cache-path.1.html  gts-cache-purge.1.html  gts-cache.1.html  gts-cache.7.html  gts-clear.1.html  gts.1.html  (+21 more)
man/: Makefile.am  Makefile.in  configure  configure.ac  gts-annotate.1  gts-annotate.1.md  gts-annotate.1.ronn  gts-cache-list.1  gts-cache-list.1.ronn  gts-cache-path.1  gts-cache-path.1.ronn  gts-cache-purge.1  gts-cache-purge.1.ronn  gts-cache.1  gts-cache.1.ronn  gts-cache.7  gts-cache.7.ronn  gts-clear.1  gts-clear.1.md  gts-clear.1.ronn  gts-complement.1  gts-complement.1.md  gts-complement.1.ronn  gts-define.1  gts-define.1.ronn  gts-delete.1  gts-delete.1.md  gts-delete.1.ronn  gts-extract.1  gts-extract.1.md  gts-extract.1.ronn  gts-infix.1  gts-infix.1.ronn  gts-insert.1  gts-insert.1.md  gts-insert.1.ronn  gts-join.1  gts-join.1.ronn  gts-length.1  gts-length.1.md  (+40 more)
(+191 files in other folders)
