man_MANS	= gts.1 \
                  gts-annotate.1 \
                  gts-clear.1 \
                  gts-complement.1 \
                  gts-delete.1 \
                  gts-extract.1 \
                  gts-insert.1 \
                  gts-length.1 \
                  gts-locator.7 \
                  gts-modifier.7 \
                  gts-query.1 \
                  gts-reverse.1 \
                  gts-rotate.1 \
                  gts-search.1 \
                  gts-select.1 \
                  gts-selector.7 \
                  gts-seqin.7 \
                  gts-seqout.7 \
                  gts-summary.1
EXTRA_DIST	= $(man_MANS)